--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <?= $this->headTitle('ZF Skeleton Application')->setSeparator(' - ')->setAutoEscape(false) ?>
+        <?= $this->headTitle('Like a Boss')->setSeparator(' - ')->setAutoEscape(false) ?>
 
         <?= $this->headMeta()
             ->appendName('viewport', 'width=device-width, initial-scale=1.0')
@@ -14,7 +14,7 @@
         <?= $this->headLink(['rel' => 'shortcut icon', 'type' => 'image/vnd.microsoft.icon', 'href' => $this->basePath() . '/img/favicon.ico'])
             ->prependStylesheet($this->basePath('css/style.css'))
             ->prependStylesheet($this->basePath('css/bootstrap-theme.min.css'))
-            ->prependStylesheet($this->basePath('css/bootstrap.min.css'))
+            ->prependStylesheet($this->basePath('css/bootstrap.css'))
         ?>
 
         <!-- Scripts -->
@@ -33,21 +33,28 @@
                         <span class="icon-bar"></span>
                     </button>
                     <a class="navbar-brand" href="<?= $this->url('home') ?>">
-                        <img src="<?= $this->basePath('img/zf-logo-mark.svg') ?>" height="28" alt="Zend Framework <?= \Application\Module::VERSION ?>"/>&nbsp;Skeleton Application
+                        Like a Boss
                     </a>
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="<?= $this->url('home') ?>">Home</a></li>
+                        <li class="active"><a href="<?= $this->url('catalog') ?>">catalog</a></li>
+                        <li class="active"><a href="<?= $this->url('new') ?>">new</a></li>
+                        <li class="active"><a href="<?= $this->url('brands') ?>">brands</a></li>
+                        <li class="active"><a href="<?= $this->url('sale') ?>">sale</a></li>
                     </ul>
+                    <ul class="nav navbar-nav pull-right">
+                        <li class="active"><a href="<?= $this->url('singin') ?>">singin</a></li>
+                    </ul>
+
                 </div>
             </div>
         </nav>
-        <div class="container">
+        <div class="container main-content">
             <?= $this->content ?>
             <hr>
             <footer>
-                <p>&copy; 2005 - <?= date('Y') ?> by Zend Technologies Ltd. All rights reserved.</p>
+                <p>&copy; <?= date('Y') ?> by Like a Boss </p>
             </footer>
         </div>
         <?= $this->inlineScript() ?>
